--- a/index.html
+++ b/index.html
@@ -321,29 +321,31 @@
             </div>
         </div>
 
-        <div class="flex justify-around py-[120px]">
-            <div class="h-[245px] w-[331px] text-white font-[Righteous] flex flex-col justify-around">
-                <center><img class="w-[80px]" src="assets/section-3/Learn.png" /></center>
-                <div class="text-[25px] text-center">01. Learn</div>
-                <div class="text-[18px] text-center">Learn continually. There is always
-                    “one more thing”to learn.</div>
+        <center>
+            <div class="flex justify-around py-[120px] w-[50%]">
+                <div class="h-[245px] w-[331px] text-white font-[Righteous] flex flex-col justify-around">
+                    <center><img class="w-[80px]" src="assets/section-3/Learn.png" /></center>
+                    <div class="text-[25px] text-center">01. Learn</div>
+                    <div class="text-[18px] text-center">Learn continually. There is always
+                        “one more thing”to learn.</div>
+                </div>
+    
+                <div class="h-[245px] w-[331px] text-white font-[Righteous] flex flex-col justify-around">
+                    <center><img class="w-[80px]" src="assets/section-3/Graduate.png" /></center>
+                    <div class="text-[25px] text-center">02. Graduate</div>
+                    <div class="text-[18px] text-center">Be bold,be courageous,
+                        be your best.</div>
+                </div>
+    
+                <div class="h-[245px] w-[331px] text-white font-[Righteous] flex flex-col justify-around">
+                    <center><img class="w-[80px]" src="assets/section-3/work.png" /></center>
+                    <div class="text-[25px] text-center">03. Work</div>
+                    <div class="text-[18px] text-center">Great companies are built in
+                        the office,with hard work put
+                        in by team.</div>
+                </div>
             </div>
-
-            <div class="h-[245px] w-[331px] text-white font-[Righteous] flex flex-col justify-around">
-                <center><img class="w-[80px]" src="assets/section-3/Graduate.png" /></center>
-                <div class="text-[25px] text-center">02. Graduate</div>
-                <div class="text-[18px] text-center">Be bold,be courageous,
-                    be your best.</div>
-            </div>
-
-            <div class="h-[245px] w-[331px] text-white font-[Righteous] flex flex-col justify-around">
-                <center><img class="w-[80px]" src="assets/section-3/work.png" /></center>
-                <div class="text-[25px] text-center">03. Work</div>
-                <div class="text-[18px] text-center">Great companies are built in
-                    the office,with hard work put
-                    in by team.</div>
-            </div>
-        </div>
+        </center>
 
 
     </section>
@@ -356,44 +358,46 @@
             <div class="font-[Saira] text-[25px]">100+ unique online course list designs</div>
         </div>
 
-        <div class="flex justify-around py-[120px]">
-            <div class="w-[253px] h-[362px] bg-white rounded-[20px] p-10 flex flex-col justify-around">
-                <center><img src="assets/section-4/gd.png" /></center>
-                <div class="text-[25px] text-center font-[Righteous]">Digital 
-                    marketing</div>
-                <div class="text-[18px] text-center font-[Righteous]">25 Courses</div>
+        <center>
+            <div class="flex flex-wrap gap-5 p-[120px] w-[80%] justify-around">
+                <div class="w-[253px] h-[362px] bg-white rounded-[20px] p-10 flex flex-col justify-around">
+                    <center><img src="assets/section-4/gd.png" /></center>
+                    <div class="text-[25px] text-center font-[Righteous]">Digital 
+                        marketing</div>
+                    <div class="text-[18px] text-center font-[Righteous]">25 Courses</div>
+                </div>
+                <div class="w-[253px] h-[362px] bg-white rounded-[20px] p-10 flex flex-col justify-around">
+                    <center><img src="assets/section-4/wd.png" /></center>
+                    <div class="text-[25px] text-center font-[Righteous]">Web
+                        Development</div>
+                    <div class="text-[18px] text-center font-[Righteous]">25 Courses</div>
+                </div>
+                <div class="w-[253px] h-[362px] bg-white rounded-[20px] p-10 flex flex-col justify-around">
+                    <center><img src="assets/section-4/ah.png" /></center>
+                    <div class="text-[25px] text-center font-[Righteous]">Art &
+                        Humanities</div>
+                    <div class="text-[18px] text-center font-[Righteous]">25 Courses</div>
+                </div>
+                <div class="w-[253px] h-[362px] bg-white rounded-[20px] p-10 flex flex-col justify-around">
+                    <center><img src="assets/section-4/pd.png" /></center>
+                    <div class="text-[25px] text-center font-[Righteous]">Personal
+                        Development</div>
+                    <div class="text-[18px] text-center font-[Righteous]">25 Courses</div>
+                </div>
+                <div class="w-[253px] h-[362px] bg-white rounded-[20px] p-10 flex flex-col justify-around">
+                    <center><img src="assets/section-4/it.png" /></center>
+                    <div class="text-[25px] text-center font-[Righteous]">IT and
+                        Software</div>
+                    <div class="text-[18px] text-center font-[Righteous]">25 Courses</div>
+                </div>
+                <div class="w-[253px] h-[362px] bg-white rounded-[20px] p-10 flex flex-col justify-around">
+                    <center><img src="assets/section-4/gd.png" /></center>
+                    <div class="text-[25px] text-center font-[Righteous]">Graphic
+                        Design</div>
+                    <div class="text-[18px] text-center font-[Righteous]">25 Courses</div>
+                </div>
             </div>
-            <div class="w-[253px] h-[362px] bg-white rounded-[20px] p-10 flex flex-col justify-around">
-                <center><img src="assets/section-4/wd.png" /></center>
-                <div class="text-[25px] text-center font-[Righteous]">Web
-                    Development</div>
-                <div class="text-[18px] text-center font-[Righteous]">25 Courses</div>
-            </div>
-            <div class="w-[253px] h-[362px] bg-white rounded-[20px] p-10 flex flex-col justify-around">
-                <center><img src="assets/section-4/ah.png" /></center>
-                <div class="text-[25px] text-center font-[Righteous]">Art &
-                    Humanities</div>
-                <div class="text-[18px] text-center font-[Righteous]">25 Courses</div>
-            </div>
-            <div class="w-[253px] h-[362px] bg-white rounded-[20px] p-10 flex flex-col justify-around">
-                <center><img src="assets/section-4/pd.png" /></center>
-                <div class="text-[25px] text-center font-[Righteous]">Personal
-                    Development</div>
-                <div class="text-[18px] text-center font-[Righteous]">25 Courses</div>
-            </div>
-            <div class="w-[253px] h-[362px] bg-white rounded-[20px] p-10 flex flex-col justify-around">
-                <center><img src="assets/section-4/it.png" /></center>
-                <div class="text-[25px] text-center font-[Righteous]">IT and
-                    Software</div>
-                <div class="text-[18px] text-center font-[Righteous]">25 Courses</div>
-            </div>
-            <div class="w-[253px] h-[362px] bg-white rounded-[20px] p-10 flex flex-col justify-around">
-                <center><img src="assets/section-4/gd.png" /></center>
-                <div class="text-[25px] text-center font-[Righteous]">Graphic
-                    Design</div>
-                <div class="text-[18px] text-center font-[Righteous]">25 Courses</div>
-            </div>
-        </div>
+        </center>
     </section>
 
     <footer>
