--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         </div>
 
         <center>
-            <div class="flex justify-around py-[120px] w-[50%]">
+            <div class="flex justify-around py-[120px] w-[50%] gap-5">
                 <div class="h-[245px] w-[331px] text-white font-[Righteous] flex flex-col justify-around">
                     <center><img class="w-[80px]" src="assets/section-3/Learn.png" /></center>
                     <div class="text-[25px] text-center">01. Learn</div>
